# fast-emoji

./: .gitignore  README.md  main.py  pyproject.toml
patch/: main.py
patches/: webview+6.1.patch
public/: fast-emoji.avif
scripts/: pack.py  post-install.py
src/api/: Api.py  Main.py
src/assets/: fast-emoji-inno.iss
src/configs/: Configs.py
src/constants/: configs.py  main.py
src/data/: __init__.py  string_from_vk.py  vk_from_string.py
src/utils/: main.py  pack.py
src/windows/: EmojiPicker.py  Main.py
view/: biome.json  global.d.ts  index.html  package.json  picker.html  tsconfig.app.json  vite.config.ts
view/public/: my-settings.avif
view/src/: global.css  main.tsx  picker.tsx
view/src/components/: App.tsx  ChangeKeybindsModal.tsx  InputRadio.tsx  NoPyWebView.tsx  SideMenu.tsx  Switch.tsx
view/src/components/main-view/: About.tsx  Settings.tsx  how-to-use.tsx  index.tsx
view/src/components/settings/: SettingRow.tsx  SwitchRow.tsx
view/src/constants/: router.tsx
view/src/hooks/: useDebounce.tsx
view/src/icons/: logo.tsx
view/src/states/: config.ts
view/src/types/: config.d.ts  emoji-picker.d.ts  emoji.d.ts  main-window.d.ts  router.d.ts
view/src/windows/: Main.tsx  emoji-picker.tsx
